# litiumx

./: .env.example  .gitignore  README.md  README_CRYPTO_BOT.md  crypto_bot.py  trading_strategy.py
copytrader/: .env.example  ARCHITECTURE_AUDIT.md  pyproject.toml
copytrader/data/: parse_results.json  parser_test_report.txt  signals_sample.json
copytrader/scripts/: parse_history.py  test_parser.py
copytrader/src/db/: schema.sql
copytrader/src/parser/: models.py  regex_parser.py  validator.py
