[project]
name = "copytrader"
version = "0.1.0"
description = "Telegram channel copier for BingX perpetual futures"
requires-python = ">=3.12"
dependencies = [
    "telethon>=1.43.0",
    "aiogram>=3.27.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.0",
    "asyncpg>=0.31.0",
    "structlog>=25.5.0",
    "pandas>=3.0.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "tenacity>=9.1.0",
    "python-dotenv>=1.1.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
